# amazon-kinesis-video-streams-webrtc-sdk-c-for-freertos

./: .gitmodules  CMakeLists.txt  Config  CrossCompile.cmake  Makefile  README.md  build.sh  sdkconfig  webrtc_example.csv
.github/workflow/: ci.yml
.github/workflows/: ci.yml
main/: AppCommon.c  AppConfig.cmake  AppCredential.c  AppDataChannel.c  AppFileSrc.c  AppMain.c  AppMediaSrc_ESP32_FileSrc.c  AppMediaSrc_FileSrc.c  AppMessageQueue.c  AppMetrics.c  AppSignaling.c  AppWebRTC.c  CMakeLists.txt  Common.c  Kconfig.projbuild  Samples.h  cmake_config_aws.c.in  cmake_config_aws.h.in  kvsWebRTCClientMaster.c  kvswebrtc_anyke_main.c  kvswebrtc_esp32_main.c  kvswebrtc_example_main.c
main/include/: AppCommon.h  AppConfig.h  AppCredential.h  AppDataChannel.h  AppError.h  AppFileSrc.h  AppMain.h  AppMediaSink.h  AppMediaSrc.h  AppMediaSrc_FileSrc.h  AppMessageQueue.h  AppMetrics.h  AppSignaling.h  AppWebRTC.h
main/lib/libllhttp/: CMakeLists.txt
main/lib/mbedtls/: CMakeLists.txt
main_amebapro/: Common.c  Samples.h  example_kvs_webrtc.c  example_kvs_webrtc.h
patch/amazon-kinesis-video-streams-webrtc-sdk-c/: 0001-fix-mbedtls.patch
patch/amazon-kinesis-video-streams-webrtc-sdk-js/: 0001-diable-offerToReceiveAudio.patch
patch/esp-idf/: 0001-fix-the-compile-error-for-webrtc.patch
patch/libsrtp/: 0001-disable-the-test-apps.patch  0002-fix-the-compile-error-for-esp32.patch  0003-add-the-mbedtls-support.patch  0004-use-angle-brackets-for-consistency.patch  0005-change-the-order-of-mbedtls.patch  0006-remove-the-wordy-define.patch  0007-remove-unnecessary-parentheses.patch  0008-fix-compile-error.patch  0009-Enable-on-ANYKE-platform.patch
patch/libwebsockets/: 0001-change-the-setting-for-esp.patch  0001-modify-libwebsocket-for-esp32.-And-revert-the-issue-.patch  0002-fix-compile-error.patch  0003-https-github.com-warmcat-libwebsockets-pull-2304.patch  0004-remove-nvs-operations.patch
patch/mbedtls/: 0001-Add-ChangeLog-entry.patch  0001-Enable-on-anyke-platform.patch  0001-rfc5764_dtls_srtp.patch  0002-Add-RFC5764-SRTP-key-generation-during-DTLS-handshak.patch  0003-Move-available-dtls-srtp-profile-list-to-ssl_config.patch  0004-Improve-DTLS-SRTP-API-with-a-dedicated-function-to-g.patch  0005-Fix-typos-in-documentation.patch  0006-Comply-with-mbedtls-naming-rules.patch  0007-Remove-compilation-warning.patch  0008-Add-mki-value-and-some-review-comments.patch  0009-support-mki-value.patch  0010-Make-keyu-material-length-in-out.patch  0011-Fix-idetifier-check-script-error.patch  0012-Fix-doxygen-script-errors.patch  0013-Enforce-SRTP-mandatory-HS-messages.patch  0014-Add-ChangeLog.patch  0015-Fix-compilation-error.patch  0016-Fix-failure-in-ssl-opts.sh.patch  0017-Add-dtls-srtp-to-client-and-server-examples.patch  0018-Fix-mki-issues.patch  0019-Set-authmode-to-optional-if-not-set.patch  0020-Add-tests-and-code-to-support.patch  0021-Fix-compilation-errors.patch  0022-Add-interop-tests.patch  0023-Force-IPv6-for-DTLS-interop-tests-with-gnutls-cli.patch  0024-Style-fixes.patch  0025-Change-tmp-buffer-size-to-be-as-closest-to-orig.patch  0026-Style-fixes.patch  0027-Improve-readability.patch  0028-Add-comment-describing-the-feature.patch  0029-Change-byte-copy-to-memcpy.patch  0030-Add-variable-validation.patch  0031-Add-buffer-size-in-unhexify-in-client-sample.patch  0032-Disable-SRTP-by-default.patch  0033-Force-IPv4-in-gnutls_cli-srtp-tests.patch  0034-Enable-SRTP-DTLS.patch  0035-Do-not-force-CMAKE_C_FLAGS_-this-prevent-external-bu.patch  0036-Fixed-build-issue.patch  0037-fixed-build-error-related-to-net_socket-types.patch  0038-Set-installation-to-CMAKE_INSTALL_LIBDIR-CMAKE_INSTA.patch  (+5 more)
patch/usrsctp/: 0001-add-lwip-support.patch  0002-disable-ipv6-and-program.patch  0003-add-mbedtls-sha1-support.patch  0004-change-the-cmakefiles-for-esp32.patch  0005-add-the-name-and-size-of-threads.patch  0006-add-pthread_exit.patch  0007-Enable-on-ANYKE-platform.patch  0007-disable-the-compiling-of-shared-lib.patch  0008-Enable-on-ANYKE-platform.patch
patch/wslay/: 0001-patches-for-freertos.patch  0002-Enable-on-ANYKE-platform.patch
